--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="index.html" data-home-page-title="index" class="u-body u-overlap u-overlap-contrast u-xl-mode"><header class="u-clearfix u-custom-color-3 u-header u-sticky u-sticky-3f5c u-header" id="sec-3385"><div class="u-clearfix u-sheet u-sheet-1">
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XS">
+        <nav class="u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XS">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-text-shadow u-custom-text-shadow-blur u-custom-text-shadow-color u-custom-text-shadow-transparency u-custom-text-shadow-x u-custom-text-shadow-y u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -45,16 +45,16 @@
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            <div class="u-container-style u-inner-container-layout u-opacity u-opacity-95 u-palette-2-dark-2 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-spacing-25 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="about-me.html">about me</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contact.html">contact</a>
 </li></ul>
               </div>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+            <div class="u-menu-overlay u-opacity u-opacity-70 u-palette-2-dark-2"></div>
           </div>
         </nav>
         <a href="works.html" data-page-id="219225130" class="u-active-none u-border-2 u-border-active-palette-2-light-2 u-border-hover-grey-15 u-border-white u-btn u-button-style u-custom-font u-font-lato u-hover-none u-none u-text-active-palette-2-light-2 u-text-body-alt-color u-text-hover-grey-10 u-btn-1">Works</a>
@@ -96,10 +96,12 @@
           <li data-u-target="#carousel-bd35" class="u-grey-30" data-u-slide-to="1"></li>
         </ol>
         <div class="u-carousel-inner" role="listbox">
-          <div class="u-active u-align-center u-carousel-item u-container-style u-image u-shading u-slide u-image-1" data-image-width="1280" data-image-height="853">
+          <div class="u-active u-align-center u-carousel-item u-container-style u-image u-shading u-slide u-image-1" data-image-width="6500" data-image-height="4500">
             <div class="u-container-layout u-valign-middle u-container-layout-1">
-              <h2 class="u-text u-text-default u-text-1">Sample Headline</h2>
-              <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.&nbsp;Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <h2 class="u-text u-text-default u-text-1">Nubank Redesign</h2>
+              <p class="u-text u-text-2">This was not a professional/freelance project, it is only a project for apply my studies and knowledge in UI Design.<br>
+                <br>
+              </p>
               <a href="work.html" data-page-id="152274343" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-light-1 u-palette-2-base u-radius-50 u-btn-1">See More</a>
             </div>
           </div>
