--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </video>
         </div>
       </div>
-      <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Raquel-outline.png" alt="" data-image-width="2000" data-image-height="2310">
+      <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Raquel-outline-7.png" alt="" data-image-width="2000" data-image-height="2310">
       <h1 class="u-text u-text-body-alt-color u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">I am Raquel</h1>
       <h3 class="u-custom-font u-font-lato u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000"> School of Visual Effects<br>UI/UX Designer
       </h3>
@@ -81,7 +81,7 @@
               </div>
             </div>
             <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-              <div class="u-container-layout u-valign-top u-container-layout-2">
+              <div class="u-container-layout u-valign-middle-xs u-valign-top-lg u-valign-top-xl u-container-layout-2">
                 <a href="about-me.html" data-page-id="73053620" class="u-border-2 u-border-hover-grey-10 u-border-white u-btn u-btn-round u-button-style u-hover-custom-color-3 u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-2-light-2 u-btn-2" data-animation-name="customAnimationIn" data-animation-duration="1000">Learn more</a>
               </div>
             </div>
@@ -89,7 +89,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-grey-10 u-section-2" id="sec-5524">
+    <section class="u-align-center u-clearfix u-grey-10 u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-section-2" id="sec-5524">
       <div id="carousel-bd35" data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1">
         <ol class="u-absolute-hcenter u-carousel-indicators u-hidden u-carousel-indicators-1">
           <li data-u-target="#carousel-bd35" class="u-active u-grey-30" data-u-slide-to="0"></li>
@@ -252,7 +252,7 @@
 	c-9.9,3.7-17,11.6-20.1,21c-3.3,10.1-10.9,18-20.6,22.2c-0.1,0-0.1,0.1-0.2,0.1c-20.3,8.9-31,32-24.6,53.2
 	C6.9,115.6,25.2,125.2,43.2,126.9z"></path></svg>
         </div>
-        <img class="u-align-left u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="2000" data-image-height="2310" src="images/Raquel-outline-8.png" data-animation-name="customAnimationIn" data-animation-duration="1000">
+        <img class="u-align-left u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="2000" data-image-height="2310" src="images/Raquel-outline.png" data-animation-name="customAnimationIn" data-animation-duration="1000">
         <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
@@ -322,16 +322,6 @@ background-color: rgba(0,0,0,0) !important
           </a>
         </div>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-mockup" target="_blank">
-        <span>Website Mockup</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Offline Website Builder</span>
-      </a>. 
-    </section>
+    
   </body>
 </html>
